# sphere_rendering

./: .clang-format  .clang-tidy  CMakeLists.txt  build.sh
include/: application.hpp  camera.hpp  config.hpp  line.hpp  sphere.hpp  vector.hpp
include/geometry/: line.hpp  sphere.hpp  vector.hpp
include/render/: camera.hpp  config.hpp  light.hpp  render.hpp  renderer.hpp  scene_manager.hpp
scripts/: run.sh
source/: main.cpp
source/geometry/: line.cpp  sphere.cpp  vector.cpp
source/renderer/: camera.cpp  light.cpp  render.cpp  renderer.cpp  scene_manager.cpp
